fixed font and alignment issues

--- a/src/main/public/stylesheets/feesCustom.css
+++ b/src/main/public/stylesheets/feesCustom.css
@@ -194,13 +194,14 @@
                             border: 2px solid transparent;
                             border-radius: 0;
                             color: 000;
-                            background-color: #dbdad9;
+                            background-color: #00823b;
                             -webkit-box-shadow: 0 2px 0 #003618;
                             box-shadow: 0 2px 0 #003618;
                             text-align: center;
                             vertical-align: top;
                             cursor: pointer;
                             -webkit-appearance: none;
+                            color: #ffffff !important;
                         }
                         
                         .black-text {
@@ -502,6 +503,7 @@
                             color: #ffffff;
                             background: #28a197;
                             background-color: #00823b;
+                            height: 239px !important;
                         }
                         
                         .govuk-panel__title {
@@ -511,7 +513,7 @@
                             -webkit-font-smoothing: antialiased;
                             -moz-osx-font-smoothing: grayscale;
                             font-weight: 700;
-                            font-size: 32px;
+                            font-size: 48px;
                             line-height: 35px;
                         }
                         
@@ -525,7 +527,7 @@
                             -webkit-box-sizing: border-box;
                             box-sizing: border-box;
                             margin-bottom: 15px;
-                            padding: 35px;
+                            padding: 40px;
                             border: 5px solid transparent;
                             text-align: center;
                         }
@@ -535,7 +537,7 @@
                             -webkit-font-smoothing: antialiased;
                             -moz-osx-font-smoothing: grayscale;
                             font-weight: 400;
-                            font-size: 24px;
+                            font-size: 36px;
                             line-height: 25px;
                         }
                         
@@ -545,11 +547,12 @@
                             -webkit-font-smoothing: antialiased;
                             -moz-osx-font-smoothing: grayscale;
                             font-weight: 700;
-                            font-size: 18px;
+                            font-size: 24px;
                             line-height: 20px;
                             display: block;
                             margin-top: 0;
                             margin-bottom: 15px;
+                            padding: 0px 0 10px 0px;
                         }
                         
                         .govuk-details {
@@ -583,19 +586,10 @@
                             -webkit-font-smoothing: antialiased;
                             -moz-osx-font-smoothing: grayscale;
                             font-weight: 700;
-                            font-size: 24px;
-                            line-height: 25px;
+                            font-size: 36px;
+                            line-height: 40px;
                             display: block;
                             margin-top: 0;
                             margin-bottom: 20px;
-                        }
-                        
-                        .reject-fee-margin {
-                            margin-top: 15px !important;
-                        }
-                        
-                        @media (min-width: 40.0625em) {
-                            .reject-fee-margin {
-                                margin-top: 15px !important;
-                            }
+                            display: inline-block;
                         }
